@@ -1,0 +1,5 @@
+{
+"name" : "TerminalPlugin Plugin",
+"version" : "0.1.0",
+"dependencies" : []
+}
